--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@
 .channel-chat li{
   margin:0 0 1px;
   padding:3px;
-  background:rgba(255,255,255,0.2);
+  border-top: 1px solid #444;
 }
 .channel-chat li p{
   margin:0;
@@ -116,3 +116,6 @@
   background:rgba(255,255,255,0.1);
 }
 h3{margin:0}
+.table tbody tr.playc > td {
+  background-color: #ccc;
+}
