--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,9 +20,13 @@ html,body {height:100%;background-image:none !important;color:#fff;}
   width:100%;
   height:600px;
 }
-.youtube-player > iframe{
+.youtube-player > object{
   width:100%;
   height:380px;
+}
+.youtube-player > .playlist {
+  overflow: auto;
+  height:220px;
 }
 .channel-second > .channel-sidebar {
   background:#222;
@@ -33,7 +37,7 @@ html,body {height:100%;background-image:none !important;color:#fff;}
   height:100%;
   background: #333;
   -webkit-border-radius: 0px 0px 4px 4px;
-        border-radius: 0px 0px 4px 4px;
+          border-radius: 0px 0px 4px 4px;
 }
 .channel-chat ul{
   height:510px;
