--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,5 @@
-html,body {height:100%;background-image:none !important;color:#fff;}
+html,body {height:100%;background-image:url(/assets/img/groovepaper.png);}
 .content-wrap {min-height:100%;height:auto !important;height:100%;margin: 0 auto -60px;}
-.content {padding-top:50px;background:#222;}
 .footer-container {padding-top:20px;}
 .footer-pusher,.footer {height:59px;}
 .footer {background-color:#444;}
@@ -11,10 +10,32 @@ html,body {height:100%;background-image:none !important;color:#fff;}
   .chat-submit > div{width:90%!important}
   .channel-second{height:100% !important;}
   .footer{margin-left:-20px;margin-right:-20px;padding-left:20px;padding-right:20px;}
+  .channel-previews .preview{margin:15px 21px !important;}
+}
+@media (max-width: 1199px) {
+  .channel-previews .preview{
+    margin:15px 75px;
+  }
+}
+@media (max-width: 767px){
+  html, body{
+    margin:0 !important;
+	padding:0 !important;
+  }
+  .channel-previews .preview{
+    width:40% !important;
+    margin:15px 5% !important;
+  }
 }
 
+.navbar-inner{
+  border-radius: 0!important;
+}
 
-
+.navbar{
+  margin:0;
+  padding:0;
+}
 .channel-second{
   overflow:hidden;
   width:100%;
