--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,75 +1,85 @@
-.img-wrap{
-  height:100%;
-  width:100%;
-  overflow:hidden;
+/* === Channel-Previews === */
+.channel-previews .preview{
+  height:350px;
+  width:50%;
+  max-width:320px;
+  float:left;
+  background-color:#fff;
+  margin:15px 33px;
+  -webkit-box-shadow: 0px 0px 10px -5px #000;
+          box-shadow: 0px 0px 10px -5px #000;
+}
+.preview .caption-wrapper{
   position:relative;
-  padding: -60px 0;
+  overflow:hidden;
 }
-.img-wrap img{
-  display:block;
-  margin: 0 auto;
+.preview img{
+  height: 180px;
+  width: 320px;
 }
-.img-overlay{
-  background-color:#060606;
-  color: #fff;
-  bottom:-100%;
-  position: absolute;
-  opacity: .8;
-  filter: alpha(opacity = .8);
-  width:100%;
-  z-index:1000;
-  -webkit-border-radius: 0px 0px 4px 4px;
-          border-radius: 0px 0px 4px 4px;
+.preview .caption-wrapper *{
   -webkit-transition: all 250ms ease;
      -moz-transition: all 250ms ease;
       -ms-transition: all 250ms ease;
        -o-transition: all 250ms ease;
           transition: all 250ms ease;
 }
-.img-overlay p{
-  padding:0 10px;
+.preview .play-overlay {
+  position: absolute;
+  bottom: 0;
+  width:100%;
+  text-align: center;
+  line-height: 180px;
+  background: #000;
+  opacity: 0;
 }
-.txt-wrap{
-  padding:4px 4px 0;
-  position:relative;
+.preview .caption-wrapper:hover .play-overlay{
+  opacity:0.8;
 }
-.txt-wrap .muted{
-  color:#555;
+.preview .caption-wrapper:hover img{
+-webkit-transform : scale(1.1);
+    -moz-transform : scale(1.1);
+    -o-transform : scale(1.1);
+    -ms-transform : scale(1.1);
+    transform : scale(1.1);
 }
-.txt-wrap p{
-  height:80px;
-}
-.channel-thumb:hover .img-overlay{
-  bottom:0;
-}
-.channel-thumb {
-  display: block;
-  padding: 0;
-  border: 1px solid #222;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  -webkit-transition: all 0.2s ease-in-out;
-     -moz-transition: all 0.2s ease-in-out;
-       -o-transition: all 0.2s ease-in-out;
-          transition: all 0.2s ease-in-out;
-}
-.channel-thumb h4 {
+.preview .info-bar {
+  background-color: #eee;
+  text-align:center;
   margin:0;
 }
+.preview h3 {
+  background-color:#f6f6f6;
+  text-align:center;
+}
+.preview ._tt {
+  background-color:none;
+  -webkit-border-radius:2px;
+          border-radius:2px;
+  -webkit-transition: background 200ms ease;
+     -moz-transition: background 200ms ease;
+      -ms-transition: background 200ms ease;
+       -o-transition: background 200ms ease;
+          transition: background 200ms ease;
+}
+.preview ._tt:hover{
+  background-color:#BBB;
+}
+.preview .description {
+  margin:0 5px;
+  color:#666;
+}
+
+
+
+/* === Channel-Cover === */
 .channel-cover{
-  position:relative;
-  top:0;
-  left:0;
   margin:0 !important;
   padding:0 !important;
-  background-image: url(/assets/img/2.png);
-  background-repeat: no-repeat;
+  background: url(/assets/img/2.png) no-repeat center center;
   height:380px;
   width:100%;
+  color:#fff;
   -webkit-background-size: cover;
      -moz-background-size: cover;
        -o-background-size: cover;
@@ -78,6 +88,7 @@
 .channel-cover-text{
   background:rgba(0, 0, 0, 0.8);
   min-height:130px;
+  max-height:380px;
 }
 .channel-cover h1{
   float:left;
@@ -94,6 +105,9 @@
   font:19px 'PT Sans Narrow', sans-serif;
 }
 
+
+
+/* === Channel-Objects === */
 .channel-chat li{
   margin:0 0 1px;
   padding:3px;
