--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
 /* === Channel-Previews === */
-.channel-previews .preview{
+.channel-previews li{
+  width:33%;
   height:350px;
-  width:50%;
-  max-width:320px;
   float:left;
+  margin:15px 0;
+}
+.channel-previews .preview{
+  height:100%;
+  width:320px;
   background-color:#fff;
-  margin:15px 33px;
-  -webkit-box-shadow: 0px 0px 10px -5px #000;
-          box-shadow: 0px 0px 10px -5px #000;
+  margin: auto;
+  -webkit-box-shadow: 0 0 10px -5px #000;
+     -moz-box-shadow: 0 0 10px -5px #000;
+          box-shadow: 0 0 10px -5px #000;
 }
 .preview .caption-wrapper{
   position:relative;
@@ -17,7 +22,7 @@
   height: 180px;
   width: 320px;
 }
-.preview .caption-wrapper *{
+.preview .caption-wrapper .play-overlay, .preview .caption-wrapper img{
   -webkit-transition: all 250ms ease;
      -moz-transition: all 250ms ease;
       -ms-transition: all 250ms ease;
@@ -37,23 +42,24 @@
   opacity:0.8;
 }
 .preview .caption-wrapper:hover img{
--webkit-transform : scale(1.1);
-    -moz-transform : scale(1.1);
-    -o-transform : scale(1.1);
-    -ms-transform : scale(1.1);
-    transform : scale(1.1);
+  -webkit-transform : scale(1.1);
+     -moz-transform : scale(1.1);
+      -ms-transform : scale(1.1);
+       -o-transform : scale(1.1);
+          transform : scale(1.1);
 }
-.preview .info-bar {
+.info-bar {
   background-color: #eee;
   text-align:center;
   margin:0;
+  height:20px;
 }
 .preview h3 {
   background-color:#f6f6f6;
   text-align:center;
 }
-.preview ._tt {
-  background-color:none;
+._tt {
+  padding:0 3px;
   -webkit-border-radius:2px;
           border-radius:2px;
   -webkit-transition: background 200ms ease;
@@ -62,7 +68,7 @@
        -o-transition: background 200ms ease;
           transition: background 200ms ease;
 }
-.preview ._tt:hover{
+._tt:hover{
   background-color:#BBB;
 }
 .preview .description {
@@ -76,14 +82,14 @@
 .channel-cover{
   margin:0 !important;
   padding:0 !important;
-  height:380px;
+  height:420px;
   width:100%;
   color:#fff;
 }
 .channel-cover-text{
   background:rgba(0, 0, 0, 0.8);
   min-height:130px;
-  max-height:380px;
+  max-height:100%;
 }
 .channel-cover h1{
   float:left;
@@ -115,7 +121,6 @@
 .channel-user{
   font:bold 19px 'PT Sans Narrow', sans-serif;
   text-shadow:0 1px 0px #000;
-  background:#111;
   padding-bottom:32000px;
   margin-bottom:-32000px;
 }
