--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@
   height:420px;
   width:100%;
   color:#fff;
+  box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
 }
 .channel-cover-text{
   background:rgba(0, 0, 0, 0.8);
