--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* === Global === */
+
+
 /* === Channel-Previews === */
 .channel-previews li{
   width:33%;
@@ -92,7 +95,7 @@
   box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
 }
 .channel-cover-text{
-  background:rgba(0, 0, 0, 0.8);
+  background:rgba(0, 0, 0, 0.6);
   min-height:130px;
   max-height:100%;
 }
@@ -114,20 +117,25 @@
 
 
 /* === Channel-Objects === */
+.channel-chat{
+  float:left;
+  width:75%;
+}
+
 .channel-chat li{
   margin:0 0 1px;
   padding:3px;
-  border-top: 1px solid #444;
+}
+.channel-chat hr{
+  margin:0;
 }
 .channel-chat li p{
   margin:0;
-  font:1.2em;
+  font:1.0em 'PT Sans', sans-serif;
 }
 .channel-user{
-  font:bold 19px 'PT Sans Narrow', sans-serif;
-  text-shadow:0 1px 0px #000;
-  padding-bottom:32000px;
-  margin-bottom:-32000px;
+  float:left;
+  width:25%;
 }
 .channel-user li{
   padding: 3px;
