--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,3 +168,55 @@ h3{margin:0}
 .form_append_hide {
   display:none;
 }
+
+/* === Loading-Screen === */
+
+.wrap-the-load{
+  position: fixed;
+  z-index: 1000;
+  height:100%;
+  width:100%;
+  background-image:url(/assets/img/groovepaper.png);
+}
+.loading-border{
+  width:  500px;
+  position: absolute;
+  left: 50%;
+  top:  50%;
+  margin:-200px 0 0 -250px;
+  background: #fff;
+  text-align:center;
+  -webkit-box-shadow: 0 0 13px -2px #000;
+     -moz-box-shadow: 0 0 13px -2px #000;
+          box-shadow: 0 0 13px -2px #000;
+}
+.loading-image{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.txt-init{
+  color: #CCCCCC;
+  font: bold 2.1em 'PT Sans', sans-serif;
+  text-shadow: 0 -1px 1px #666666, 0 1px 1px #FFFFFF;
+  padding:10px;
+}
+.txt-status{
+  font: 0.9em 'PT Sans Narrow', sans-serif;
+}
+.txt-copy{
+  font: 0.7em 'PT Sans', sans-serif;
+}
+.progress{
+  margin: 0;
+  margin-top: 10px;
+  -webkit-border-radius:0px;border-radius: 0px;
+}
+.upper-hr{
+  margin: 0;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+.lower-hr{
+  margin: 0;
+  margin-top: 10px;
+}
