--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,6 +16,14 @@ html,body {height:100%;background-image:url(/assets/img/groovepaper.png);}
   .sp1{width:100% !important;}
   .sp2{width:100% !important;}
   .channel-previews li{width:100%;}
+  .loading-border{
+    width: 100% !important;
+    height: 100% !important;
+    position: static !important;
+    margin: 0 !important;
+  }
+}
+@media (max-width: 500px){
 }
 
 .navbar-inner{
