--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,9 +62,6 @@
   text-align:center;
 }
 ._tt {
-  padding:0 3px;
-  -webkit-border-radius:2px;
-          border-radius:2px;
   -webkit-transition: background 200ms ease;
      -moz-transition: background 200ms ease;
       -ms-transition: background 200ms ease;
@@ -75,12 +72,22 @@
   background-color:#BBB;
 }
 
-.pull-left ._tt::after {
-  content:' | ';
+.pull-left ._tt:first-child{
+  margin-left: 3px;
 }
 
-.pull-left ._tt:last-child::after {
+.pull-left ._tt::after {
+  padding-right: 1px;
+  margin-left: 1px;
+  content:'|';
+  background-color: black;
+}
+
+.pull-left ._tt:last-child::after, .pull-left ._tt:hover:last-child::after {
   content:'';
+  padding-right: 0px;
+  margin-left: 0px;
+  background-color: inherit;
 }
 
 .preview .description {
