--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html,body {height:100%;background-image:url(../img/groovepaper.png);}
-.content-wrap {min-height:100%;height:auto !important;height:100%;margin: 0 auto -60px;}
+.content-wrap {min-height:100%;height:auto !important;height:100%;margin: 0 auto;}
 .footer-container {padding-top:20px;}
 .footer-pusher,.footer {height:59px;}
 .footer {background-color:#444;}
@@ -7,9 +7,14 @@ html,body {height:100%;background-image:url(../img/groovepaper.png);}
 
 /* === Global === */
 .navbar {
+  opacity: 0;
   z-index: 501;
   margin:0;
   padding:0;
+  -webkit-transition: all 0.75s ease-in;
+  -moz-transition: all 0.75s ease-in;
+  -o-transition: all 0.75s ease-in;
+  transition: all 0.75s ease-in;
 }
 
 .navbar-inner{
