--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,392 +1,400 @@
 html,body {height:100%;background-image:url(../img/groovepaper.png);}
-.content-wrap {min-height:100%;height:auto !important;height:100%;margin: 0 auto;}
 .footer-container {padding-top:20px;}
-.footer-pusher,.footer {height:59px;}
-.footer {background-color:#444;}
+.footer {height:59px;background-color:#444;}
 
 
 /* === Global === */
 .navbar {
-  opacity: 0;
-  z-index: 501;
-  margin:0;
-  padding:0;
-  -webkit-transition: all 0.75s ease-in;
-  -moz-transition: all 0.75s ease-in;
-  -o-transition: all 0.75s ease-in;
-  transition: all 0.75s ease-in;
+	opacity: 0;
+	z-index: 501;
+	margin:0;
+	padding:0;
+	-webkit-transition: all 0.75s ease-in;
+	-moz-transition: all 0.75s ease-in;
+	-o-transition: all 0.75s ease-in;
+	transition: all 0.75s ease-in;
 }
 
 .navbar-inner{
-  border-radius: 0!important;
+	border-radius: 0!important;
 }
 
 /* === Channel-Previews === */
 .channel-previews li{
-  width:33%;
-  height:350px;
-  float:left;
-  margin:15px 0;
+	width:33%;
+	height:350px;
+	float:left;
+	margin:15px 0;
 }
 .channel-previews .preview{
-  height:100%;
-  width:320px;
-  background-color:#fff;
-  margin: auto;
-  -webkit-box-shadow: 0 0 10px -5px #000;
-     -moz-box-shadow: 0 0 10px -5px #000;
-          box-shadow: 0 0 10px -5px #000;
+	height:100%;
+	width:320px;
+	background-color:#fff;
+	margin: auto;
+	-webkit-box-shadow: 0 0 10px -5px #000;
+		 -moz-box-shadow: 0 0 10px -5px #000;
+					box-shadow: 0 0 10px -5px #000;
 }
 .preview .caption-wrapper{
-  position:relative;
-  overflow:hidden;
+	position:relative;
+	overflow:hidden;
 }
 .preview img{
-  height: 180px;
-  width: 320px;
+	height: 180px;
+	width: 320px;
 }
 .preview .caption-wrapper .play-overlay, .preview .caption-wrapper img{
-  -webkit-transition: all 250ms ease;
-     -moz-transition: all 250ms ease;
-      -ms-transition: all 250ms ease;
-       -o-transition: all 250ms ease;
-          transition: all 250ms ease;
+	-webkit-transition: all 250ms ease;
+		 -moz-transition: all 250ms ease;
+			-ms-transition: all 250ms ease;
+			 -o-transition: all 250ms ease;
+					transition: all 250ms ease;
 }
 .preview .play-overlay {
-  position: absolute;
-  bottom: 0;
-  width:100%;
-  text-align: center;
-  line-height: 180px;
-  background: #000;
-  opacity: 0;
+	position: absolute;
+	bottom: 0;
+	width:100%;
+	text-align: center;
+	line-height: 180px;
+	background: #000;
+	opacity: 0;
 }
 .preview .caption-wrapper:hover .play-overlay{
-  opacity:0.8;
+	opacity:0.8;
 }
 .preview .caption-wrapper:hover img{
-  -webkit-transform : scale(1.1);
-     -moz-transform : scale(1.1);
-      -ms-transform : scale(1.1);
-       -o-transform : scale(1.1);
-          transform : scale(1.1);
+	-webkit-transform : scale(1.1);
+		 -moz-transform : scale(1.1);
+			-ms-transform : scale(1.1);
+			 -o-transform : scale(1.1);
+					transform : scale(1.1);
 }
 .info-bar {
-  background-color: #eee;
-  text-align:center;
-  margin:0;
-  height:20px;
+	background-color: #eee;
+	text-align:center;
+	height: 20px;
+	margin: 0;
+}
+.info-bar-channel{
+	background-color: #ededed;
+	text-align:center;
+	padding-top: 3px;
+	font-size: 16px;
 }
 .preview h3 {
-  background-color:#f6f6f6;
-  text-align:center;
+	background-color:#f6f6f6;
+	text-align:center;
 }
 ._tt {
-  -webkit-transition: background 200ms ease;
-     -moz-transition: background 200ms ease;
-      -ms-transition: background 200ms ease;
-       -o-transition: background 200ms ease;
-          transition: background 200ms ease;
+	-webkit-transition: background 200ms ease;
+		 -moz-transition: background 200ms ease;
+			-ms-transition: background 200ms ease;
+			 -o-transition: background 200ms ease;
+					transition: background 200ms ease;
 }
 ._tt:hover{
-  background-color:#BBB;
+	background-color:#BBB;
 }
-
+a [class^="icon-"]{
+	color: #333;
+}
 .pull-left ._tt:first-child{
-  margin-left: 3px;
+	margin-left: 3px;
 }
 
 .pull-left ._tt::after {
-  padding-right: 1px;
-  margin-left: 1px;
-  content:'|';
-  background-color: black;
+	padding-right: 1px;
+	margin-left: 1px;
+	content:'|';
 }
 
 .pull-left ._tt:last-child::after, .pull-left ._tt:hover:last-child::after {
-  content:'';
-  padding-right: 0px;
-  margin-left: 0px;
-  background-color: inherit;
+	content:'';
+	padding-right: 0px;
+	margin-left: 0px;
+	background-color: inherit;
 }
 
 .preview .description {
-  margin:0 5px;
-  color:#666;
+	margin:0 5px;
+	color:#666;
 }
 
 /* === Dropdowns === */
 .login-dropdown {
-  padding:15px;
-  padding-bottom:0;
+	padding:15px;
+	padding-bottom:0;
 }
 
 .favourite-list>li {
-  overflow: hidden;
+	overflow: hidden;
 }
 .favourite-list>li>a {
-  white-space:normal;
+	white-space:normal;
 }
 .favourite-list>li>a>h5 {
-  text-overflow: clip;
-  white-space: nowrap;
+	text-overflow: clip;
+	white-space: nowrap;
 }
 .favourite-list>li i.nowplaying {
-  display: none;
+	display: none;
 }
 .favourite-list>li.current i.nowplaying {
-  display: inline-block;
+	display: inline-block;
 }
 .favourite-list>li>a>p {
-  overflow: hidden;
-  max-height: 90px;
-  max-width: 420px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+	overflow: hidden;
+	max-height: 90px;
+	max-width: 420px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 
 /* === Channel-Cover === */
 .channel-cover{
-  margin:0 !important;
-  padding:0 !important;
-  height:420px;
-  width:100%;
-  color:#fff;
-  box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
+	margin:0 !important;
+	padding:0 !important;
+	height:420px;
+	width:100%;
+	color:#fff;
+	box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
 }
 .channel-cover-text{
-  background:rgba(0, 0, 0, 0.6);
-  min-height:130px;
-  max-height:100%;
+	background:rgba(0, 0, 0, 0.6);
+	min-height:130px;
+	max-height:100%;
 }
 .channel-cover h1{
-  float:left;
-  color:#fff;
-  margin:0 10px 0 10px;
-  font:bold 110px 'PT Sans Narrow', sans-serif;
-  text-shadow: 0 3px 3px #000;
-  letter-spacing:-2px;
+	float:left;
+	color:#fff;
+	margin:0 10px 0 10px;
+	font:bold 110px 'PT Sans Narrow', sans-serif;
+	text-shadow: 0 3px 3px #000;
+	letter-spacing:-2px;
 }
 .channel-cover p{
-  padding-top:30px;
-  margin:0 10px 0 10px;
-  text-shadow:0 1px 0px #000;
-  font:19px 'PT Sans Narrow', sans-serif;
+	padding-top:30px;
+	margin:0 10px 0 10px;
+	text-shadow:0 1px 0px #000;
+	font:19px 'PT Sans Narrow', sans-serif;
 }
 
 
 
 /* === Channel-Objects === */
 .channel-second{
-  overflow:hidden;
-  width:100%;
-  height:600px;
+	overflow:hidden;
+	width:100%;
+	height:600px;
 }
 .sp2{
-  width:50%;
-  float:left;
-  height:100%;
+	width:50%;
+	float:left;
+	height:100%;
 }
 .channel-chat{
-  float:left;
-  width:75%;
-  position: relative;
-  height:410px;
+	float:left;
+	width:75%;
+	position: relative;
+	height:410px;
 }
 .channel-chat .channel-chat-inner {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 
 .channel-chat ul{
-  overflow:auto;
-  max-height:320px;
+	overflow:auto;
+	max-height:320px;
 }
 .channel-chat li{
-  padding: 1px 3px;
-  clear:both;
+	padding: 1px 3px;
+	clear:both;
 }
 .channel-chat hr{
-  margin:0;
+	margin:0;
 }
 .channel-chat li p{
-  margin: 0;
-  margin-left: 3px;
-  font: 1.0em 'PT Sans', sans-serif;
+	margin: 0;
+	margin-left: 3px;
+	font: 1.0em 'PT Sans', sans-serif;
 }
 .channel-chat .chat-content {
 }
 .channel-chat .chat-content:hover {
-  background: rgba(0,0,0,0.025);
+	background: rgba(0,0,0,0.025);
 }
 .channel-chat form{
-  margin:0;
+	margin:0;
 }
 .loading-more{
-  text-align: center;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #ddd;
+	text-align: center;
+	background-color: #f5f5f5;
+	border-bottom: 1px solid #ddd;
 }
 .channel-user{
-  float:left;
-  width:25%;
+	float:left;
+	width:25%;
+}
+.user-list li:first-child > hr{
+  display: none;
 }
 .channel-user li{
-  padding: 3px;
-  margin-bottom:1px;
-  background: rgba(255,255,255,0.1);
+	padding: 3px;
+	margin-bottom:1px;
+	background: rgba(255,255,255,0.1);
 }
 .channel-user li .avatar{
-  width: 20%;
-  float: left;
-  margin-right: 4px;
+	width: 32px;
+	float: left;
+	margin-right: 4px;
 }
 .channel-user hr{
 	margin:0;
 }
 .chat-submit > input{
-  -webkit-border-radius: 0px;
-     -moz-border-radius: 0px;
-          border-radius: 0px;
+	-webkit-border-radius: 0px;
+		 -moz-border-radius: 0px;
+					border-radius: 0px;
 }
 h3{margin:0}
 .table tbody tr.playc > td {
-  background-color: #ccc;
+	background-color: #ccc;
 }
 
 .youtube-player > object{
-  width:100%;
-  height:380px;
-  margin:0;
-  padding:0;
-  margin-bottom:-5px;
+	width:100%;
+	height:380px;
+	margin:0;
+	padding:0;
+	margin-bottom:-5px;
 }
 
 .youtube-player > #replace-player {
-  height: 380px;
-  background:#ccc;
-  padding-top:12px;
-  padding-left:12px;
-  color: #222;
+	height: 380px;
+	background:#ccc;
+	padding-top:12px;
+	padding-left:12px;
+	color: #222;
 }
 .youtube-player > #replace-player * {
-  margin:0;
-  color: #222;
+	margin:0;
+	color: #222;
 }
 
 .playlist{
-  height:200px;
+	height:200px;
 }
 .playlist > .playlist-table {
-  overflow: auto;
-  display:block;
-  height:100%;
+	overflow: auto;
+	display:block;
+	height:100%;
 }
 .form-append .controls {
-  margin-left:70px;
+	margin-left:70px;
 }
 .form-append .control-label {
-  width:60px;
+	width:60px;
 }
 .form-append {
-  margin:0;
-  padding:10px;
+	margin:0;
+	padding:10px;
 }
 .form-append .controls input {
-  margin-right:-81px; /* urgh, how ugly.. */
+	margin-right:-81px; /* urgh, how ugly.. */
 }
 .form-append {
-  background-color:#f6f6f6;
-  -webkit-transition: all 250ms ease;
-     -moz-transition: all 250ms ease;
-      -ms-transition: all 250ms ease;
-       -o-transition: all 250ms ease;
-          transition: all 250ms ease;
+	background-color:#f6f6f6;
+	-webkit-transition: all 250ms ease;
+		 -moz-transition: all 250ms ease;
+			-ms-transition: all 250ms ease;
+			 -o-transition: all 250ms ease;
+					transition: all 250ms ease;
 }
 .form_append_hide {
-  display:none;
+	display:none;
 }
 
 /* === Loading-Screen === */
 
 .wrap-the-load{
-  position: fixed;
-  z-index: 1000;
-  height:100%;
-  width:100%;
-  /*happy little white to transparent background transition*/
-  background: rgba(255,255,255,1);
-  -webkit-transition: all 0.75s ease-in;
-  -moz-transition: all 0.75s ease-in;
-  -o-transition: all 0.75s ease-in;
-  transition: all 0.75s ease-in;
+	position: fixed;
+	z-index: 1000;
+	height:100%;
+	width:100%;
+	/*happy little white to transparent background transition*/
+	background: rgba(255,255,255,1);
+	-webkit-transition: all 0.75s ease-in;
+	-moz-transition: all 0.75s ease-in;
+	-o-transition: all 0.75s ease-in;
+	transition: all 0.75s ease-in;
 }
 .loading-border{
-  width: 500px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: -200px 0 0 -250px;
-  background: #fff;
-  text-align:center;
-  -webkit-box-shadow: 0 0 13px -2px #000;
-     -moz-box-shadow: 0 0 13px -2px #000;
-          box-shadow: 0 0 13px -2px #000;
+	width: 500px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin: -200px 0 0 -250px;
+	background: #fff;
+	text-align:center;
+	-webkit-box-shadow: 0 0 13px -2px #000;
+		 -moz-box-shadow: 0 0 13px -2px #000;
+					box-shadow: 0 0 13px -2px #000;
 }
 .loading-image{
-  padding-top: 20px;
-  padding-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 .txt-init{
-  color: #CCCCCC;
-  font: bold 2.1em 'PT Sans', sans-serif;
-  text-shadow: 0 -1px 1px #666666, 0 1px 1px #FFFFFF;
-  padding:10px;
+	color: #CCCCCC;
+	font: bold 2.1em 'PT Sans', sans-serif;
+	text-shadow: 0 -1px 1px #666666, 0 1px 1px #FFFFFF;
+	padding:10px;
 }
 .txt-status{
-  font: 0.9em 'PT Sans Narrow', sans-serif;
+	font: 0.9em 'PT Sans Narrow', sans-serif;
 }
 .txt-copy{
-  font: 0.7em 'PT Sans', sans-serif;
+	font: 0.7em 'PT Sans', sans-serif;
 }
 .progress{
-  margin: 0;
-  margin-top: 10px;
-  -webkit-border-radius:0px;border-radius: 0px;
+	margin: 0;
+	margin-top: 10px;
+	-webkit-border-radius:0px;border-radius: 0px;
 }
 .upper-hr{
-  margin: 0;
-  margin-bottom: 10px;
-  margin-top: 20px;
+	margin: 0;
+	margin-bottom: 10px;
+	margin-top: 20px;
 }
 .lower-hr{
-  margin: 0;
-  margin-top: 10px;
+	margin: 0;
+	margin-top: 10px;
 }
 
 @media (max-width: 979px) {
-  .channel-second{height:100% !important;}
+	.channel-second{height:100% !important;}
 }
 @media (max-width: 1199px) {
-  html, body{margin:0 !important;padding:0 !important;}
-  .container{width:100%!important;}
-  .channel-previews li{width:50%;}
+	html, body{margin:0 !important;padding:0 !important;}
+	.container{width:100%!important;}
+	.channel-previews li{width:50%;}
 }
 @media (max-width: 767px){
-  .sp1{width:100% !important;}
-  .sp2{width:100% !important;}
-  .channel-previews li{width:100%;}
-  .loading-border{
-    width: 100% !important;
-    height: 100% !important;
-    position: static !important;
-    margin: 0 !important;
-  }
-  .channel-chat .channel-chat-inner{
-    position: relative;
-  }
+	.sp1{width:100% !important;}
+	.sp2{width:100% !important;}
+	.channel-previews li{width:100%;}
+	.loading-border{
+		width: 100% !important;
+		height: 100% !important;
+		position: static !important;
+		margin: 0 !important;
+	}
+	.channel-chat .channel-chat-inner{
+		position: relative;
+	}
 }
 @media (max-width: 500px){
 }
