--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
-html,body {height:100%;background-image:url(../img/groovepaper.png);}
+html,body {
+  height:100%;
+  background-image:url(../img/groovepaper.png);
+}
+.content-wrap {min-height:100%;height:auto !important;height:100%;margin: 0 auto;}
 .footer-container {padding-top:20px;}
 .footer {height:59px;background-color:#444;}
 
-
+* { box-sizing: border-box }/*this is my god*/
 /* === Global === */
 .navbar {
 	opacity: 0;
@@ -153,31 +157,79 @@ a [class^="icon-"]{
 
 /* === Channel-Cover === */
 .channel-cover{
-	margin:0 !important;
-	padding:0 !important;
-	height:420px;
-	width:100%;
-	color:#fff;
-	box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
+  margin:0 !important;
+  padding:0 !important;
+  min-height:420px;
+  width:100%;
+  color:#fff;
 }
-.channel-cover-text{
-	background:rgba(0, 0, 0, 0.6);
-	min-height:130px;
-	max-height:100%;
+.channel-cover-cp {
+  display: none;
+  overflow: hidden;
+  color: black;
 }
-.channel-cover h1{
-	float:left;
-	color:#fff;
-	margin:0 10px 0 10px;
-	font:bold 110px 'PT Sans Narrow', sans-serif;
-	text-shadow: 0 3px 3px #000;
-	letter-spacing:-2px;
+.channel-cover-cp .container{
+  position: relative;
 }
-.channel-cover p{
-	padding-top:30px;
-	margin:0 10px 0 10px;
-	text-shadow:0 1px 0px #000;
-	font:19px 'PT Sans Narrow', sans-serif;
+.channel-cover-cp  .tabs-left>.nav-tabs {
+  position: relative;
+  text-align: right;
+  margin-right: 0;
+  text-shadow: 0 0 3px black;
+  font-weight: bold;
+}
+.channel-cover-cp  .tabs-left>.nav-tabs li.active{
+  position: relative;
+  z-index:250;
+  box-shadow:0 0px 20px rgba(0, 0, 0, 0.25);
+}
+.channel-cover-cp  .tabs-left>.nav-tabs li a{
+  color: white;
+}
+
+.channel-cover-cp  .tabs-left>.nav-tabs .active a, .channel-cover-cp  .tabs-left>.nav-tabs a:hover{
+  text-shadow: 0 0 0 red;
+  color: black;
+}
+.channel-cover-cp .tab-content{
+  position: relative;
+  background-image:-moz-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
+  background-image:-webkit-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image:-o-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image:linear-gradient(to bottom, #ffffff, #f2f2f2);
+  background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
+  border-bottom-left-radius:4px;
+  border-bottom-right-radius:4px;
+  box-shadow:0 0px 40px rgba(0, 0, 0, 0.5);
+  border: 1px solid transparent;
+  border-color: #ddd;
+  border-top:0;
+  z-index:251;
+}
+.channel-cover-cp .tab-content fieldset legend{
+  padding-left: 45px;
+}
+.channel-cover-text {
+  box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
+  background:rgba(0, 0, 0, 0.6);
+  min-height:130px;
+  max-height:100%;
+}
+.channel-cover .channel-cover-text h1{
+float: left;
+color: #fff;
+margin: 0 10px 0 10px;
+font: bold 110px 'PT Sans Narrow', sans-serif;
+text-shadow: 0 3px 3px #000;
+letter-spacing: -2px;
+}
+.channel-cover .channel-cover-text p{
+  padding-top:30px;
+  margin:0 10px 0 10px;
+  text-shadow:0 1px 0px #000;
+  font-size: 19px;
+  font-family: 'PT Sans Narrow', sans-serif;
 }
 
 
