--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,6 +167,8 @@ a [class^="icon-"]{
   display: none;
   overflow: hidden;
   color: black;
+  box-shadow:  inset 0 -40px 92px -10px rgba(255, 255, 255, 0.1), inset 0 40px 736px -10px rgba(0, 0, 0, 0.7);
+  background:rgba(0, 0, 0, 0.6);
 }
 .channel-cover-cp .container{
   position: relative;
@@ -205,6 +207,7 @@ a [class^="icon-"]{
   border: 1px solid transparent;
   border-color: #ddd;
   border-top:0;
+  margin-bottom: 24px;
   z-index:251;
 }
 .channel-cover-cp .tab-content fieldset legend{
@@ -212,7 +215,7 @@ a [class^="icon-"]{
 }
 .channel-cover-text {
   box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
-  background:rgba(0, 0, 0, 0.6);
+  background:rgba(0, 0, 0, 0.3);
   min-height:130px;
   max-height:100%;
 }
