--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ html,body {
 	-moz-transition: all 0.75s ease-in;
 	-o-transition: all 0.75s ease-in;
 	transition: all 0.75s ease-in;
+  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.25);
 }
 
 .navbar-inner{
@@ -167,13 +168,14 @@ a [class^="icon-"]{
   display: none;
   overflow: hidden;
   color: black;
-  box-shadow:  inset 0 -40px 92px -10px rgba(255, 255, 255, 0.1), inset 0 40px 736px -10px rgba(0, 0, 0, 0.7);
+  box-shadow:  inset 0 -40px 92px -10px rgba(255, 255, 255, 0.1);
   background:rgba(0, 0, 0, 0.6);
 }
 .channel-cover-cp .container{
   position: relative;
 }
 .channel-cover-cp  .tabs-left>.nav-tabs {
+  padding-top: 24px;
   position: relative;
   text-align: right;
   margin-right: 0;
@@ -183,7 +185,7 @@ a [class^="icon-"]{
 .channel-cover-cp  .tabs-left>.nav-tabs li.active{
   position: relative;
   z-index:250;
-  box-shadow:0 0px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.25);
 }
 .channel-cover-cp  .tabs-left>.nav-tabs li a{
   color: white;
@@ -203,10 +205,9 @@ a [class^="icon-"]{
   background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
   border-bottom-left-radius:4px;
   border-bottom-right-radius:4px;
-  box-shadow:0 0px 40px rgba(0, 0, 0, 0.5);
-  border: 1px solid transparent;
-  border-color: #ddd;
-  border-top:0;
+  box-shadow:0 0px 40px rgba(0, 0, 0, 0.5), inset 0 10px 46px -20px rgba(0, 0, 0, 0.7);
+  border: 1px solid #ddd;
+  margin-top: 1px;
   margin-bottom: 24px;
   z-index:251;
 }
@@ -214,7 +215,7 @@ a [class^="icon-"]{
   padding-left: 45px;
 }
 .channel-cover-text {
-  box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.7);
+  box-shadow: inset 0 -2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 40px 46px -10px rgba(0, 0, 0, 0.35);
   background:rgba(0, 0, 0, 0.3);
   min-height:130px;
   max-height:100%;
