--- a/assets/css/rewrite.css
+++ b/assets/css/rewrite.css
@@ -302,6 +302,9 @@ img {
 	=== Login-Form ===
 */
 
+.form-button{
+
+}
 
 /*
 	=== Info-Box-Stuff ===
@@ -474,9 +477,9 @@ textarea:focus,input[type="text"]:focus,input[type="password"]:focus,input[type=
 	box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(242,78,78,.6);
 }
 
-.login-form, .login-form-submit{
+.login-form, .form-button > a, .form-button{
 	white-space: nowrap;
-	display: none;
+	display: block;
 }
 
 label{
@@ -561,4 +564,31 @@ label{
 }
 .to-dark:hover{
 	background: #444;
+}
+
+.table{
+	width: 100%;
+	max-width: 100%;
+	background-color: transparent;
+	border-collapse: collapse;
+	border-spacing: 0;
+	-webkit-border-radius: 1px;
+	-moz-border-radius: 1px;
+	border-radius: 1px;
+}
+.table > thead{
+	color: #333;
+}
+.table > tbody > tr{
+	height: 15px;
+}
+.table th, .table td {
+	padding: 8px;
+	line-height: 20px;
+	text-align: left;
+	vertical-align: top;
+	border-bottom: 1px solid #999;
+}
+.table tbody:nth-child(odd) {
+	background-color: rgba(100,100,100,0.2);
 }
